# XLFormula-Engine

./: .gitignore  Cargo.toml  Formula.txt  LICENSE  README.md
src/: calculate.rs  grammar.pest  lib.rs  main.rs  parse_formula.rs  todo.txt  types.rs
tests/: test.rs
